fixed spacing issues for mobile

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -7,7 +7,7 @@
     font-size: 1.5rem;
   }
   #location {
-    font-size: 0.5rem;
+    font-size: 0.3rem;
     color: #fff;
   }
 }
