--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -6,7 +6,7 @@
   }
 
   #tagline {
-    font-size: 1.5rem;
+    font-size: 1.7rem;
   }
 
   #links {
@@ -15,6 +15,10 @@
 
   #buttonDown {
     font-size: 2.5rem;
+  }
+
+  #links a {
+    padding: 1rem;
   }
 }
 
@@ -56,7 +60,7 @@
 .social-links a {
   color: #fff;
   font-size: 3em;
-  padding: 2rem;
+  padding: 1.8rem;
   text-shadow: 2px 2px #000;
 }
 
